--- a/index.html
+++ b/index.html
@@ -3,17 +3,65 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Applove</title>
-	<!-- Importa la fuente del proyecto (Raleway) de Google Fonts (https://fonts.google.com) -->
-
-	<!-- Enlaza tu CSS reutilizable aquí (common.css) -->
-
-	<!-- Enlaza tu CSS del proyecto aquí -->
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Desarrollo Ejercicio Guiado de la Lección 25: Display & Grid System">
+	<meta name="author" content="Caterina Da Silva">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/common.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	<!-- Escribe el HTML aquí -->
+<div id="top"></div>
+<header>
+	<div class="menu container">
+		<a href="#services" class="text-uppercase link">Services</a>
+		<a href="#work" class="text-uppercase link">Work</a>
+		<a href="#team" class="text-uppercase link">The team</a>
+		<a href="#top"><img src="assets/images/logo-r.png" class="logo" alt="Logo" width="70"></a>
+	</div>
+</header>
+<section id="home">
+	<div class="container">
+		<h2>YOU JUST FOUND AN UNTILMATE</h2>
+		<h1 class="text-uppercase text-home mb-0">We are applove from heart</h1>
+		<p class="text-uppercase mt-0">Handcrafted - Modern design - Pixel perfect - Passioned design</p>
+		<a href="#services" class="btn-home">View services</a>
+	</div>
+</section>
+	<section id="services">
+		<div class="container">
+			<h2 class="text-uppercase text-services mt-0">Services</h2>
+		</div>
+		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum atque ipsa consequatur ea ipsam ducimus, minus iste similique perspiciatis tempore sunt, amet. Iusto similique distinctio, sunt ad officia nobis!</h4>
+		<div class="box-services">
+			<img src="assets/images/website.png" alt="Website" width="200">
+			<h5 class="mb-0">USER INTERFACE DESIGN</h5>
+			<h6 class="m-0">Wireframing</h6>
+			<h6 class="m-0">Prototyping</h6>
+			<h6 class="m-0">Usability Testing</h6>
+		</div>
+		<div class="box-services">
+			<img src="assets/images/website.png" alt="Website" width="200">
+			<h5 class="mb-0">CONCEPT AND IDEAS</h5>
+			<h6 class="m-0">Conceptualization</h6>
+			<h6 class="m-0">Digital Branding</h6>
+			<h6 class="m-0">Product Strategy</h6>
+		</div>
+		<div class="box-services">
+			<img src="assets/images/website.png" alt="Website" width="200">
+			<h5 class="mb-0">DESIGN AND BRANDING</h5>
+			<h6 class="m-0">Interaction Design</h6>
+			<h6 class="m-0">Graphic Design</h6>
+			<h6 class="m-0">Identity Design</h6>
+		</div>
+	</section>
 
-	<!-- Enlaza tu JS aquí -->
-	
+<footer>
+	<div class="container">
+		<p>&copy; Copyright</p>
+		<small>Desarrollado por Caterina Da Silva</small>
+	</div>
+</footer>
+<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
