Estructura y Estilos terminados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Applove</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Desarrollo Ejercicio Guiado de la Lección 25: Display & Grid System">
+	<meta name="description" content="Desarrollo Ejercicio Guiado y Evaluado de la Lección 25: Display & Grid System">
 	<meta name="author" content="Caterina Da Silva">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/common.css">
@@ -28,10 +28,9 @@
 		<a href="#services" class="btn-home">View services</a>
 	</div>
 </section>
-	<section id="services">
-		<div class="container">
-			<h2 class="text-uppercase text-services mt-0">Services</h2>
-		</div>
+<section id="services">
+	<div class="container">
+		<h2 class="text-uppercase text-services mt-0">Services</h2>
 		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum atque ipsa consequatur ea ipsam ducimus, minus iste similique perspiciatis tempore sunt, amet. Iusto similique distinctio, sunt ad officia nobis!</h4>
 		<div class="box-services">
 			<img src="assets/images/website.png" alt="Website" width="200">
@@ -54,8 +53,51 @@
 			<h6 class="m-0">Graphic Design</h6>
 			<h6 class="m-0">Identity Design</h6>
 		</div>
-	</section>
-
+	</div>
+</section>
+<section id="work">
+	<div class="container">
+		<h2 class="text-uppercase text-services mt-0">Work</h2>
+		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum atque ipsa consequatur ea ipsam ducimus, minus iste similique perspiciatis tempore sunt, amet. Iusto similique distinctio, sunt ad officia nobis!</h4>
+		<img src="assets/images/hero.png" alt="Hero image" class="img-responsive">
+		<div class="work-services">
+			<img src="assets/images/img-1.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO A</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-2.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO B</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-3.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO C</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-4.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO D</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-5.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO E</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-6.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO F</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-7.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO G</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-8.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO H</h5>
+		</div>
+		<div class="work-services">
+			<img src="assets/images/img-9.jpg" alt="Website" width="200">
+			<h5 class="mb-0">PROYECTO I</h5>
+		</div>
+	</div>
+</section>
 <footer>
 	<div class="container">
 		<p>&copy; Copyright</p>
