--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 			<h6 class="m-0">Usability Testing</h6>
 		</div>
 		<div class="box-services">
-			<img src="assets/images/website.png" alt="Website" width="200">
+			<img src="assets/images/img-1.png" alt="Website" width="200">
 			<h5 class="mb-0">CONCEPT AND IDEAS</h5>
 			<h6 class="m-0">Conceptualization</h6>
 			<h6 class="m-0">Digital Branding</h6>
 			<h6 class="m-0">Product Strategy</h6>
 		</div>
 		<div class="box-services">
-			<img src="assets/images/website.png" alt="Website" width="200">
+			<img src="assets/images/lapiz.png" alt="Website" width="200">
 			<h5 class="mb-0">DESIGN AND BRANDING</h5>
 			<h6 class="m-0">Interaction Design</h6>
 			<h6 class="m-0">Graphic Design</h6>
@@ -60,42 +60,60 @@
 		<h2 class="text-uppercase text-services mt-0">Work</h2>
 		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum atque ipsa consequatur ea ipsam ducimus, minus iste similique perspiciatis tempore sunt, amet. Iusto similique distinctio, sunt ad officia nobis!</h4>
 		<img src="assets/images/hero.png" alt="Hero image" class="img-responsive">
-		<div class="work-services">
-			<img src="assets/images/img-1.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO A</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-2.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO B</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-3.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO C</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-4.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO D</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-5.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO E</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-6.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO F</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-7.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO G</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-8.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO H</h5>
-		</div>
-		<div class="work-services">
-			<img src="assets/images/img-9.jpg" alt="Website" width="200">
-			<h5 class="mb-0">PROYECTO I</h5>
-		</div>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-1.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO A</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-2.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO B</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-3.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO C</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-4.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO D</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-5.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO E</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-6.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO F</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-7.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO G</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-8.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO H</h5>
+			</div>
+		</a>
+		<a href="#" class="modal">
+			<div class="work-services">
+				<img src="assets/images/img-9.jpg" alt="Website" width="200">
+				<h5 class="mb-0">PROYECTO I</h5>
+			</div>
+		</a>
 	</div>
 </section>
 <footer>
@@ -104,6 +122,6 @@
 		<small>Desarrollado por Caterina Da Silva</small>
 	</div>
 </footer>
-<script type="text/javascript" src="assets/js/script.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
