--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
 		<h2 class="text-uppercase text-services mt-0">Services</h2>
 		<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptatum atque ipsa consequatur ea ipsam ducimus, minus iste similique perspiciatis tempore sunt, amet. Iusto similique distinctio, sunt ad officia nobis!</h4>
 		<div class="box-services">
-			<img src="assets/images/website.png" alt="Website" width="200">
+			<img src="assets/images/website.png" alt="Website">
 			<h5 class="mb-0">USER INTERFACE DESIGN</h5>
 			<h6 class="m-0">Wireframing</h6>
 			<h6 class="m-0">Prototyping</h6>
 			<h6 class="m-0">Usability Testing</h6>
 		</div>
 		<div class="box-services">
-			<img src="assets/images/img-1.png" alt="Website" width="200">
+			<img src="assets/images/img-1.png" alt="Website">
 			<h5 class="mb-0">CONCEPT AND IDEAS</h5>
 			<h6 class="m-0">Conceptualization</h6>
 			<h6 class="m-0">Digital Branding</h6>
 			<h6 class="m-0">Product Strategy</h6>
 		</div>
 		<div class="box-services">
-			<img src="assets/images/lapiz.png" alt="Website" width="200">
+			<img src="assets/images/lapiz.png" alt="Website">
 			<h5 class="mb-0">DESIGN AND BRANDING</h5>
 			<h6 class="m-0">Interaction Design</h6>
 			<h6 class="m-0">Graphic Design</h6>
@@ -62,55 +62,55 @@
 		<img src="assets/images/hero.png" alt="Hero image" class="img-responsive">
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-1.jpg" alt="Website" width="200">
+				<img src="assets/images/img-1.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO A</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-2.jpg" alt="Website" width="200">
+				<img src="assets/images/img-2.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO B</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-3.jpg" alt="Website" width="200">
+				<img src="assets/images/img-3.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO C</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-4.jpg" alt="Website" width="200">
+				<img src="assets/images/img-4.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO D</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-5.jpg" alt="Website" width="200">
+				<img src="assets/images/img-5.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO E</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-6.jpg" alt="Website" width="200">
+				<img src="assets/images/img-6.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO F</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-7.jpg" alt="Website" width="200">
+				<img src="assets/images/img-7.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO G</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-8.jpg" alt="Website" width="200">
+				<img src="assets/images/img-8.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO H</h5>
 			</div>
 		</a>
 		<a href="#" class="modal">
 			<div class="work-services">
-				<img src="assets/images/img-9.jpg" alt="Website" width="200">
+				<img src="assets/images/img-9.jpg" alt="Website">
 				<h5 class="mb-0">PROYECTO I</h5>
 			</div>
 		</a>
@@ -122,6 +122,10 @@
 		<small>Desarrollado por Caterina Da Silva</small>
 	</div>
 </footer>
+<div id="work-services-modal" class="hidden">
+	<div class="modal-body"></div>
+	<div id="close"></div>
+</div>
 <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
